<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#F6DA87"
    android:padding="16dp"
    android:layout_height="300dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/amarante"
            android:hint="@string/enter_title"
            android:inputType="text"
            android:textColorHint="#000"
            android:padding="15dp"
            android:textColor="#000"
            android:textSize="24sp"
            android:autofillHints="Enter" />

        <EditText
            android:id="@+id/edtContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amarante"
            android:hint="@string/start_typing"
            android:inputType="textCapSentences"
            android:textColorHint="#000"
            android:padding="15dp"
            android:textColor="#000"
            android:textSize="24sp"
            android:autofillHints="Enter" />
    </LinearLayout>

    <Button
        android:id="@+id/btnAdd"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/amarante"
        android:text="@string/add"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold" />

</RelativeLayout>
